--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body {
   overscroll-behavior: none;
 }
 
+.ql-snow{
+  border: none !important;
+}
+
 @layer utilities {
   .font-CircularStdBlack {
     font-family: CircularStdBlack, sans-serif;
@@ -32,4 +36,38 @@ body {
   .font-jira {
     font-family: jira, sans-serif;
   }
+
+  .custom-scrollbar {
+    *::-webkit-scrollbar {
+      height: 10px;
+      width: 10px;
+    }
+    *::-webkit-scrollbar-track {
+      border-radius: 5px;
+      background-color: #ffffff;
+    }
+
+    *::-webkit-scrollbar-track:hover {
+      background-color: #ffffff;
+    }
+
+    *::-webkit-scrollbar-track:active {
+      background-color: #ffffff;
+    }
+
+    *::-webkit-scrollbar-thumb {
+      border-radius: 5px;
+      background-color: #959595;
+    }
+
+    *::-webkit-scrollbar-thumb:hover {
+      background-color: #c3c3c3;
+    }
+
+    *::-webkit-scrollbar-thumb:active {
+      background-color: #909090;
+    }
+  }
+
+
 }
